--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               Even though I have never been hired before I might be a good addition
               to a team. I am open to new challenges and I would love to continue my
               learning adventure. My main language is JavaScript and my go-to stack
-              is MERN (Mongo, Express, React, Node).
+              is MERN (Mongo, Express, React, Node) and recently I have been learning Go.
             </p>
             <div class="stack-logos">
               <div class="stack-item">
@@ -51,6 +51,10 @@
               <div class="stack-item">
                 <img src="img/node-icon.png"></img>
                 <h2>Node</h2>
+              </div>
+              <div class="stack-item">
+                <img src="img/go-icon.png"></img>
+                <h2>Go</h2>
               </div>
             </div>
           </div>
