--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
               Even though I have never been hired before I might be a good addition
               to a team. I am open to new challenges and I would love to continue my
               learning adventure. My main language is JavaScript and my go-to stack
-              is MERN (Mongo, Express, React, Node) and recently I have been learning Go.
+              is MERN (Mongo, Express, React, Node) and recently I have been learning Go and Java.
             </p>
+            <hr class="line">
             <div class="stack-logos">
               <div class="stack-item">
                 <img src="img/mongo-icon.png"></img>
@@ -51,6 +52,10 @@
               <div class="stack-item">
                 <img src="img/node-icon.png"></img>
                 <h2>Node</h2>
+              </div>
+              <div class="stack-item">
+                <img src="img/java-icon.png"></img>
+                <h2>Java</h2>
               </div>
               <div class="stack-item">
                 <img src="img/go-icon.png"></img>
