--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     </nav>
   </header>
   <div class="showcase card" data-card="0">
-    <img src="img/js-icon.png" />
-    <h1 class="write"></h1>
+    <div class="showcase-center">
+      <img src="img/js-icon.png" />
+      <h1 class="write"></h1>
+    </div>
   </div>
   <main>
     <div class="about card about-card" data-card="1">
@@ -66,8 +68,8 @@
       <div class="toggle-socials">SOCIALS</div>
     </aside>
   </div>
-  <script src="js/main.js" async="true"></script>
-  <script src="js/nav.js" async="true"></script>
+  <script src="js/main.js" async></script>
+  <script src="js/nav.js" async"></script>
 </body>
 
 </html>
